# pimoroni-presto-tmos

./: .ampy  .editorconfig  .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
examples/: 01_clock.py  04_systray.py  05_async.py  06_async_ui.py  07_static_pages.py  08_systray_accessories.py  09_modal_pages.py  10_apps.py  11_themes.py  clock.py  radio_button.py  rotating_pages.py  systray.py
python/: tmos.py
src/: tmos.py  tmos_apps.py  tmos_themes.py  tmos_ui.py
tests/: conftest.py  test_AppManager.py  test_BacklightManager.py  test_Control.py  test_LatchingButton.py  test_MomentaryButton.py  test_OS.py  test_Page.py  test_PushButton.py  test_RadioButton.py  test_Systray.py  test_Theme.py  test_WindowManager.py  test__Button.py  test_ui.py
