[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
license = {text = "MIT"}
name = "tmos"
version = "1.0.0a3"
description = "A minimal single-tasking OS for the Pimoroni Presto platform"
authors = [
	{ name = "Tom Cowland", email = "info@tomcowland.com" }
]
dependencies = []
requires-python = ">=3.10"

[tool.pytest]

[tool.pylint.format]
max-line-length = 99

[tool.black]
line-length = 99
