[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
license = {text = "MIT"}
name = "tmos"
version = "1.0.0a4"
description = "A minimal single-tasking OS for the Pimoroni Presto platform"
authors = [
	{ name = "Tom Cowland", email = "info@tomcowland.com" }
]
dependencies = []
requires-python = ">=3.10"

[tool.pytest.ini_options]
filterwarnings = [
    # We construct a temporary coroutine to get the type
    'ignore:coroutine .+ was never awaited'
]

[tool.pylint.format]
max-line-length = 99

[tool.black]
line-length = 99
